@@ -38,11 +38,11 @@ DIST sbcl-1.0.29-x86_64-linux-binary-r2.tar.bz2 8170272 RMD160 3d345e6795679bb26
 DIST sbcl-1.0.31-source.tar.bz2 3354506 RMD160 e94c9097ff4138471c179bfe1f1e2c33e6f2e169 SHA1 4a4b74de174f97050a2785ac4559aa6dd48a3d09 SHA256 d0264d6e4a49e6d181c27348f07de733c09860c9cd74a1fbe8e6e3cb7ca289dc
 DIST sbcl-1.0.36-source.tar.bz2 3393142 RMD160 160e2adf42557a12879e0476aa8e46d6c255e6aa SHA1 58263e0f6d17833bc722846e1be01c2a9af90228 SHA256 bbd878562ba36feb21b591e7165cc8feeabf51271a56b139640dfb1fb482bac5
 DIST sbcl-1.0.36-x86-linux-binary.tar.bz2 8812467 RMD160 000f73bf31e04a591fdef4484dd5897362cd0041 SHA1 7f642fb0ee6ab0043a415f8424e2f3d8a98e85d3 SHA256 d25eecb2ea92e6758597b35568a33c43e9c4ce10841160d6753d2b54e5428148
-EBUILD sbcl-1.0.19.ebuild 6934 RMD160 53935f31b296045a21b1e531a0311d3c77f66832 SHA1 28c1f98715e85db299bac94c0fdbb199905ae291 SHA256 83505065335b602904a1f2518ce028f4d058bc841e551e86e823a1f7b62b16ed
-EBUILD sbcl-1.0.26-r10.ebuild 6825 RMD160 c81daad12667fd1add636c503a2afe5cb7c41a82 SHA1 26f9e81175def7615559f9605bdcca3a21617a4f SHA256 14fc8da95aa4b75c8303bd622e1a7aef07857f86950733ebb374389c4f4590bb
-EBUILD sbcl-1.0.27-r10.ebuild 6763 RMD160 5f76fca890954a61c5a2350ee3dc8c1dec7b2d2f SHA1 bb89107b0abc1a6e55361b492cd7b7b2a62f62e3 SHA256 f1359798613c30306a6584bd1e58a77dc1f6535aa407dd44212ad6b2cd656636
-EBUILD sbcl-1.0.28.ebuild 6708 RMD160 fe4d618e583f3c2864adda06e5ad6e8f7efbcf2d SHA1 da7c7aaf0f40bfaab729a0f9dfe889ee20dba0d7 SHA256 e8f6991c0a15092a9664a37a1fb9140d537bd0c309026c616a9d5ef94c752f93
-EBUILD sbcl-1.0.31.ebuild 6700 RMD160 fcc5f353ed955f391591b136dbc5327d63c6e0ec SHA1 cf6a67a05c4f3a60b126ba8bc2f56699f762ac03 SHA256 96b73eb6cf1113eed1f13aa5a17e5104539c0216882c1bfe21dbf2da962aac74
-EBUILD sbcl-1.0.36-r1.ebuild 7261 RMD160 fac05dd6658ffa3c21b1845723866e7094b79c89 SHA1 667899dcf93db6bba81fe4cf076d6bb2bb63690f SHA256 bbff8b44aed14fe6e62301f626166cb47310c39edb549930e947812595c094b6
-MISC ChangeLog 47658 RMD160 bd8585c140a4dd224729f2816199796bb7e807f7 SHA1 49d9240757a3b19c57125064ea16724ecfcc5f44 SHA256 9d85c2086ddf8825dcf3fa5fdf3aaaa69c768c99c57d8f0e826a66ca1f0c1ccb
+EBUILD sbcl-1.0.19.ebuild 6901 RMD160 80c85c9178c47b1afab5bf7d00818d4c8758f1e0 SHA1 725c9a79d4db8be997469da93f94f44795c963eb SHA256 bddcb6812ef87dba70fc00c9bedcc1cfacc9d9c8ec54d0a5ecfdfd0174cbc3b5
+EBUILD sbcl-1.0.26-r10.ebuild 6791 RMD160 58801f9769e7795e1d4208d53d73dcd6a0c176e6 SHA1 281ceed1541bb9f7eb8e819a3298abb1dc391775 SHA256 705e2fcb6d86c7052064613fcb11ea23ba1c0b26cec00a6fde057dbf5f5c4846
+EBUILD sbcl-1.0.27-r10.ebuild 6729 RMD160 94b14e68c0782be859de8b7c2b32addd33c472f1 SHA1 4c554bfb7d5d0645edf88e930bcfb610affd6ca3 SHA256 ce46157dbc5ab98d20cec864800a4966f4a813bc6740835aca1cddaf11ba704c
+EBUILD sbcl-1.0.28.ebuild 6674 RMD160 243c2646e473d6482672172eeee6f7f6307560d8 SHA1 cff111ce63e4df2050fe8db8c91c6c0f82847438 SHA256 0398206f4594a139f38d639dc8d4950f4a15c0416c810c60ce9ae86f1c81ee9d
+EBUILD sbcl-1.0.31.ebuild 6666 RMD160 753e4e5c6e4907ecab8da61b3c1915654139e94a SHA1 55038436eba87930294bcb37991b9529f6a6e394 SHA256 364ebe9269541d9f070b757c7438c5706a13892f0e5161a0503302fa99de8d4f
+EBUILD sbcl-1.0.36-r1.ebuild 7227 RMD160 706e6b9b86940a4e63bf7a66c5f96cfc605c55d3 SHA1 db58704bd4676ae22518fc3f05a310399e1f4b64 SHA256 4fa2950b0bec385fbe3262ae3291553ea03b3be8524a5bb7ce3b6117ca3b71b5
+MISC ChangeLog 47894 RMD160 2815285b6f89d9e76c7ded17d9070cf3742a9f0a SHA1 c20c9da2093b46c4c17457535b8f88c661eaae04 SHA256 516b0fbccc3228f7bfe08b175ae75524ab008d76b91cd829913096e88a440fed
 MISC metadata.xml 1192 RMD160 cc9ef1f835468d8901a7fac96ff183cffaa8448f SHA1 d628ab8da2e19ab42b6df9dcd1afc09e3efdcd05 SHA256 b5fb21d6b7020a9ebde8793cfb7209ee1db5c5d6ee0b1c8fd6c7b7e3a3db27b1
