@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.19.ebuild,v 1.9 2010/03/26 01:54:24 pchrist Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lisp/sbcl/sbcl-1.0.19.ebuild,v 1.10 2010/12/17 20:19:14 ulm Exp $
 
 inherit eutils flag-o-matic
 
@@ -45,8 +45,6 @@ IUSE="ldb source threads unicode doc cobalt"
 DEPEND="doc? ( sys-apps/texinfo media-gfx/graphviz )"
 
 PDEPEND="dev-lisp/gentoo-init"
-
-PROVIDE="virtual/commonlisp"
 
 #Disable warnings about executable stacks, as this won't be fixed soon, by
 #upstream
